# django-telegram-app

./: .coveragerc  .gitignore  README.md  mkdocs.yml  pyproject.toml  runtests.py
.github/workflows/: ci.yml  docs-pages.yml  release.yml
django_telegram_app/: __init__.py  admin.py  apps.py  checks.py  conf.py  models.py  resolver.py  tests.py  urls.py  views.py
django_telegram_app/bot/: __init__.py  base.py  bot.py
django_telegram_app/bot/testing/: __init__.py  testcases.py
django_telegram_app/locale/nl/LC_MESSAGES/: django.po
django_telegram_app/management/: base.py
django_telegram_app/management/commands/: setcommands.py  setwebhook.py
django_telegram_app/migrations/: 0001_initial.py  0002_remove_telegramsettings_user.py
docs/: 01-configuration.md  02-bot-commands.md  03-management-commands.md  04-swappable-telegram-settings.md  api.md  bot-commands-new.md  bot-commands.md  configuration.md  getting-started.md  index.md  management-commands.md  requirements.txt  swappable-telegram-settings.md  testing.md
docs/howto/: debug-bot-issues.md  index.md  set-custom-commands.md  swap-telegramsettings.md  write-management-commands.md
docs/reference/: checks.md  configuration.md  index.md
docs/reference/api/: callbackdata.md  message.md  telegramsettings.md
docs/reference/api/bot/: base-bot-command.md  step.md  telegram-update.md  testcases.md
docs/topics/: bot-architecture.md  callback-data.md  help-command.md  index.md  state-management.md  telegramsettings-design.md  testing.md  update-flow.md
docs/tutorials/: dice-roller-tutorial-ext.md  dice-roller-tutorial.md  getting-started.md  index.md  whats-next.md  write-tests.md
tests/: __init__.py  settings.py  test_admin.py  test_apps.py  test_bot.py  test_checks.py  test_get_telegram_settings_model.py  test_get_telegram_settings_model.py.py  test_management.py  test_models.py  test_resolver.py
tests/testapps/: settings.py  urls.py
tests/testapps/samplebot/: __init__.py  apps.py  models.py
tests/testapps/samplebot/management/: __init__.py
tests/testapps/samplebot/management/commands/: __init__.py  poll.py
tests/testapps/samplebot/telegrambot/: __init__.py
tests/testapps/samplebot/telegrambot/commands/: __init__.py  echo.py  hiddencommand.py  poll.py
